--- a/juego.html
+++ b/juego.html
@@ -154,6 +154,6 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
-    <script src="./js/game.js" type="text/javascript" />
+    <script src="./js/game.js" type="text/javascript"></script>
     </body>
 </html>
