--- a/juego.html
+++ b/juego.html
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="col-4 align-items-center copy">
-                <p class="mx-auto">&copy; R & C Dev 2020 </p>
+                <p class="mx-auto">&copy; Blue Jay Dev 2020 </p>
             </div>
         </div>
     </div>
