--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
         </div>
         <div class="row footer ">
             <div class="col" >
-                <p class="mx-auto">&copy; R & C Dev 2020 </p>
+                <p class="mx-auto">&copy; Blue Jay Dev 2020 </p>
             </div>
         </div>
     </div>
