--- a/instrucciones.html
+++ b/instrucciones.html
@@ -79,7 +79,7 @@
         <div class="row footer ">
             <a href="./menu.html"><i class="fas fa-home fa-2x"></i></a>
             <div class="col">
-                <p class="mx-auto">&copy; R & C Dev 2020 </p>
+                <p class="mx-auto">&copy; Blue Jay Dev 2020 </p>
             </div>
         </div>
     </div>
